--- a/src/app/assets/globals.css
+++ b/src/app/assets/globals.css
@@ -7,15 +7,11 @@
   --foreground: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+.l-gradient {
+  background-image: linear-gradient(#00000084, #00000084), url("/bg.jpg");
 }
