--- a/src/app/assets/globals.css
+++ b/src/app/assets/globals.css
@@ -15,3 +15,9 @@ body {
 .l-gradient {
   background-image: linear-gradient(#00000084, #00000084), url("/bg.jpg");
 }
+
+@layer components {
+  .container {
+    @apply py-5 md:py-10 px-5 md:px-10 lg:px-20 max-w-[1440px] mx-auto;
+  }
+}
