brands components defined to main

--- a/src/app/assets/globals.css
+++ b/src/app/assets/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #171717;
-  --foreground: #ffffff;
+  --background: #f6f3f3f3;
+  --foreground: #171717;
 }
 
 body {
